--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -534,6 +534,43 @@ header .header-2.active {
 
 /*========Section Arrivals End ==========  */
 
+/*========Section Deals Start ==========  */
+.deal {
+  background: #f3f3f3;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
+.deal .content {
+  flex: 1 1 42rem;
+}
+.deal .image {
+  flex: 1 1 42rem;
+}
+.deal .image img {
+  width: 100%;
+}
+
+.deal .content h3 {
+  color: var(--green);
+  font-size: 2.5rem;
+  padding-bottom: 0.5rem;
+}
+.deal .content h1 {
+  color: var(--black);
+  font-size: 4rem;
+}
+.deal .content p {
+  font-size: 1.5rem;
+  color: var(--light-color);
+  padding-bottom: 1rem 0;
+  line-height: 2;
+}
+
+/*========Section Deals End ==========  */
+
 /* media queries  */
 
 @media (max-width: 991px) {
