--- a/backend/css/style.css
+++ b/backend/css/style.css
@@ -571,6 +571,43 @@ header .header-2.active {
 
 /*========Section Deals End ==========  */
 
+/*========Section Reviews Start ==========  */
+.reviews .reviews-slider .box {
+  border: var(--border);
+  padding: 2rem;
+  text-align: center;
+}
+
+.reviews .reviews-slider .box:hover {
+  border: var(--border-hover);
+}
+
+.reviews .reviews-slider .box img {
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.reviews .reviews-slider .box h3 {
+  color: var(--black);
+  padding: 0.5rem 0;
+  font-size: 2.2rem;
+}
+
+.reviews .reviews-slider .box p {
+  color: var(--light-color);
+  font-size: 1.4rem;
+  padding: 1rem 0;
+  line-height: 2;
+}
+
+.reviews .reviews-slider .box i {
+  color: var(--green);
+  font-size: 1.4rem;
+}
+/*========Section Reviews End ==========  */
+
 /* media queries  */
 
 @media (max-width: 991px) {
